--- a/nlp4j/nlp4j-wordnet/pom.xml
+++ b/nlp4j/nlp4j-wordnet/pom.xml
@@ -8,7 +8,7 @@
 		<version>1.3.1.0</version>
 	</parent>
 	<artifactId>nlp4j-wordnet</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0.0</version>
 	<dependencies>
 		<dependency>
 			<groupId>org.nlp4j</groupId>
