--- a/nlp4j/nlp4j-examples/pom.xml
+++ b/nlp4j/nlp4j-examples/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
@@ -65,6 +66,11 @@
 			<groupId>org.nlp4j</groupId>
 			<artifactId>nlp4j-twtr</artifactId>
 			<version>[1.1.0.0,)</version>
+		</dependency>
+		<dependency>
+			<groupId>org.nlp4j</groupId>
+			<artifactId>nlp4j-kuromoji</artifactId>
+			<version>1.3.4.0</version>
 		</dependency>
 	</dependencies>
 </project>
