--- a/nlp4j/nlp4j-wiki/pom.xml
+++ b/nlp4j/nlp4j-wiki/pom.xml
@@ -31,6 +31,11 @@
 			<artifactId>nlp4j-core</artifactId>
 			<version>[1.3.4.0,)</version>
 		</dependency>
+		<dependency>
+			<groupId>org.nlp4j</groupId>
+			<artifactId>nlp4j-webcrawler</artifactId>
+			<version>[1.0.0.0,)</version>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-compress -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
