--- a/nlp4j/nlp4j-core/pom.xml
+++ b/nlp4j/nlp4j-core/pom.xml
@@ -13,8 +13,9 @@
 	<!-- JAR -->
 	<packaging>jar</packaging>
 	<name>nlp4j-core</name>
-	<!-- 1.3.3.0 : 20210920 -->
-	<version>1.3.4.0</version>
+	<!-- 1.3.3.0 : 2021-09-20 -->
+	<!-- 1.3.4.0 : 2021-12-29 -->
+	<version>1.3.5.0</version>
 	<description>Natural Language Processing Library for Java</description>
 	<url>https://nlp4j.org/</url>
 	<licenses>
@@ -107,6 +108,18 @@
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-javadoc-plugin</artifactId>
 						<version>3.1.1</version>
+						<configuration>
+							<author>true</author>
+							<source>1.8</source>
+							<encoding>UTF-8</encoding>
+							<charset>UTF-8</charset>
+							<docencoding>UTF-8</docencoding>
+							<additionalparam>-Xdoclint:none</additionalparam>
+							<additionalOptions>-Xdoclint:none</additionalOptions>
+							<additionalJOption>-Xdoclint:none</additionalJOption>
+							<additionalJOption>-Xdoclint:all</additionalJOption>
+							<additionalJOption>-Xdoclint:-missing</additionalJOption>
+						</configuration>
 					</plugin>
 				</plugins>
 			</build>
