--- a/nlp4j/nlp4j-yahoojp/pom.xml
+++ b/nlp4j/nlp4j-yahoojp/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.nlp4j</groupId>
@@ -7,12 +6,12 @@
 		<version>1.3.1.0</version>
 	</parent>
 	<artifactId>nlp4j-yahoojp</artifactId>
-	<version>1.3.1.0</version>
+	<version>1.3.5.0</version>
 	<dependencies>
 		<dependency>
 			<groupId>org.nlp4j</groupId>
 			<artifactId>nlp4j-core</artifactId>
-			<version>[1.3.1.0,)</version>
+			<version>[1.3.5.0,)</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/junit/junit -->
 		<dependency>
