--- a/nlp4j/nlp4j-examples/pom.xml
+++ b/nlp4j/nlp4j-examples/pom.xml
@@ -70,5 +70,10 @@
 			<artifactId>nlp4j-kuromoji</artifactId>
 			<version>1.3.4.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.nlp4j</groupId>
+			<artifactId>nlp4j-yahoojp</artifactId>
+			<version>1.3.5.0</version>
+		</dependency>
 	</dependencies>
 </project>
