--- a/nlp4j/nlp4j-core/pom.xml
+++ b/nlp4j/nlp4j-core/pom.xml
@@ -16,7 +16,8 @@
 	<!-- 1.3.5.0 : 2022-03-04 -->
 	<!-- 1.3.5.1 : 2022-04-29 -->
 	<!-- 1.3.6.0 : 2022-05-22 -->
-	<version>1.3.6.0</version>
+	<!-- 1.3.6.1 : 2022-06-15 local install  -->
+	<version>1.3.6.1</version>
 	<description>Natural Language Processing Library for Java</description>
 	<url>https://nlp4j.org/</url>
 	<licenses>
