--- a/nlp4j/nlp4j-mecab/pom.xml
+++ b/nlp4j/nlp4j-mecab/pom.xml
@@ -1,6 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.nlp4j</groupId>
@@ -8,7 +6,7 @@
 		<version>1.3.1.0</version>
 	</parent>
 	<artifactId>nlp4j-mecab</artifactId>
-	<version>0.1.0.0</version>
+	<version>0.1.1.0</version>
 	<licenses>
 		<license>
 			<name>Apache License, Version 2.0</name>
