--- a/nlp4j/nlp4j-wordnet/pom.xml
+++ b/nlp4j/nlp4j-wordnet/pom.xml
@@ -1,6 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.nlp4j</groupId>
@@ -9,13 +7,6 @@
 	</parent>
 	<artifactId>nlp4j-wordnet</artifactId>
 	<version>1.0.0.0</version>
-	<dependencies>
-		<dependency>
-			<groupId>org.nlp4j</groupId>
-			<artifactId>nlp4j-core</artifactId>
-			<version>1.3.3.0</version>
-		</dependency>
-	</dependencies>
 	<build>
 		<plugins>
 			<!-- COMPILER -->
@@ -30,4 +21,18 @@
 			</plugin>
 		</plugins>
 	</build>
+	<dependencies>
+		<dependency>
+			<groupId>org.nlp4j</groupId>
+			<artifactId>nlp4j-core</artifactId>
+			<version>1.3.3.0</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/junit/junit -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.2</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 </project>
