--- a/nlp4j/nlp4j-core/pom.xml
+++ b/nlp4j/nlp4j-core/pom.xml
@@ -20,7 +20,7 @@
 	<!-- 1.3.7.0 : 2022-08-03  -->
 	<!-- 1.3.7.1 : 2022-09-04  -->
 	<!-- 1.3.7.2 : 2022-09-08  -->
-	<!-- 1.3.7.3 : NOT RELEASED : UPDATES - UPOS20 -->
+	<!-- 1.3.7.3 : 2022-10-07 : UPDATES - UPOS20 -->
 	<version>1.3.7.3</version>
 	<description>Natural Language Processing Library for Java</description>
 	<url>https://nlp4j.org/</url>
