--- a/nlp4j/nlp4j-webcrawler/pom.xml
+++ b/nlp4j/nlp4j-webcrawler/pom.xml
@@ -1,6 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.nlp4j</groupId>
@@ -13,7 +11,7 @@
 		<dependency>
 			<groupId>org.nlp4j</groupId>
 			<artifactId>nlp4j-core</artifactId>
-			<version>[1.3.5.0,)</version>
+			<version>[1.3.7.4,)</version>
 		</dependency>
 		<dependency>
 			<groupId>org.nlp4j</groupId>
@@ -34,7 +32,5 @@
 			<version>1.15</version>
 		</dependency>
 	</dependencies>
-	<build>
-
-	</build>
+	<build></build>
 </project>
