--- a/nlp4j/nlp4j-webcrawler/pom.xml
+++ b/nlp4j/nlp4j-webcrawler/pom.xml
@@ -6,12 +6,14 @@
 		<version>1.3.1.0</version>
 	</parent>
 	<artifactId>nlp4j-webcrawler</artifactId>
+	<!-- 1.0.0.0 : 2020-05-17 -->
+	<!-- 1.1.0.0 : 2022-04-29 -->
 	<version>1.1.1.0</version>
 	<dependencies>
 		<dependency>
 			<groupId>org.nlp4j</groupId>
 			<artifactId>nlp4j-core</artifactId>
-			<version>[1.3.7.4,)</version>
+			<version>1.3.7.6</version>
 		</dependency>
 		<dependency>
 			<groupId>org.nlp4j</groupId>
