--- a/nlp4j/nlp4j-core/pom.xml
+++ b/nlp4j/nlp4j-core/pom.xml
@@ -26,7 +26,8 @@
 	<!-- 1.3.7.6 : 2023-02-01 -->
 	<!-- 1.3.7.7 : 2023-04-01 -->
 	<!-- 1.3.7.8 : 2023-05-27 -->
-	<version>1.3.7.9</version>
+	<!-- 1.3.7.9 : 2023-07-22 -->
+	<version>1.3.7.10</version>
 	<description>Natural Language Processing Library for Java</description>
 	<url>https://nlp4j.org/</url>
 	<licenses>
@@ -83,11 +84,13 @@
 			</activation>
 			<build>
 				<plugins>
+					<!-- https://mvnrepository.com/artifact/org.sonatype.plugins/nexus-staging-maven-plugin -->
 					<!-- sonatype release -->
 					<plugin>
 						<groupId>org.sonatype.plugins</groupId>
 						<artifactId>nexus-staging-maven-plugin</artifactId>
-						<version>1.6.8</version>
+						<!-- version>1.6.8</version --><!-- Feb 13, 2017 -->
+						<version>1.6.13</version><!-- Apr 21, 2022 -->
 						<extensions>true</extensions>
 						<configuration>
 							<serverId>ossrh</serverId>
