--- a/nlp4j/nlp4j-sudachi/pom.xml
+++ b/nlp4j/nlp4j-sudachi/pom.xml
@@ -9,6 +9,75 @@
 	</parent>
 	<artifactId>nlp4j-sudachi</artifactId>
 	<version>1.0.0.0</version>
+	<profiles>
+		<profile>
+			<id>release-sign-artifacts</id>
+			<!-- for release -->
+			<!-- mvn -DperformRelease=true deploy -->
+			<activation>
+				<property>
+					<name>performRelease</name>
+					<value>true</value>
+				</property>
+			</activation>
+			<build>
+				<plugins>
+					<!--
+					https://mvnrepository.com/artifact/org.sonatype.plugins/nexus-staging-maven-plugin -->
+					<!-- sonatype release -->
+					<plugin>
+						<groupId>org.sonatype.plugins</groupId>
+						<artifactId>nexus-staging-maven-plugin</artifactId>
+						<!-- version>1.6.8</version --><!--
+						Feb 13, 2017 -->
+						<version>1.6.13</version><!-- Apr 21, 2022 -->
+						<extensions>true</extensions>
+						<configuration>
+							<serverId>ossrh</serverId>
+							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
+							<autoReleaseAfterClose>true</autoReleaseAfterClose>
+						</configuration>
+					</plugin>
+					<!-- gpg sign -->
+					<!-- https://maven.apache.org/plugins/maven-gpg-plugin/ -->
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-gpg-plugin</artifactId>
+						<version>1.6</version>
+						<executions>
+							<execution>
+								<id>sign-artifacts</id>
+								<phase>verify</phase>
+								<goals>
+									<goal>sign</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<!-- javadoc -->
+					<!-- https://maven.apache.org/plugins/maven-javadoc-plugin/ -->
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-javadoc-plugin</artifactId>
+						<version>3.1.1</version>
+						<configuration>
+							<author>true</author>
+							<source>1.8</source>
+							<encoding>UTF-8</encoding>
+							<charset>UTF-8</charset>
+							<docencoding>UTF-8</docencoding>
+							<additionalparam>-Xdoclint:none</additionalparam>
+							<additionalOptions>-Xdoclint:none</additionalOptions>
+							<additionalJOption>-Xdoclint:none</additionalJOption>
+							<additionalJOption>-Xdoclint:all</additionalJOption>
+							<additionalJOption>-Xdoclint:-missing</additionalJOption>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -18,7 +87,7 @@
 		<dependency>
 			<groupId>org.nlp4j</groupId>
 			<artifactId>nlp4j-core</artifactId>
-			<version>1.3.7.9</version>
+			<version>1.3.7.10</version>
 		</dependency>
 		<dependency>
 			<groupId>com.worksap.nlp</groupId>
