--- a/nlp4j/nlp4j-core/pom.xml
+++ b/nlp4j/nlp4j-core/pom.xml
@@ -1,4 +1,6 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<!-- PARENT -->
 	<parent>
@@ -27,7 +29,8 @@
 	<!-- 1.3.7.7 : 2023-04-01 -->
 	<!-- 1.3.7.8 : 2023-05-27 -->
 	<!-- 1.3.7.9 : 2023-07-22 -->
-	<version>1.3.7.10</version>
+	<!-- 1.3.7.10 : 2023-07-22 -->
+	<version>1.3.7.11</version>
 	<description>Natural Language Processing Library for Java</description>
 	<url>https://nlp4j.org/</url>
 	<licenses>
@@ -68,7 +71,7 @@
 			<name>Nexus Release Repository</name>
 			<uniqueVersion>false</uniqueVersion>
 			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2
-            </url>
+			</url>
 		</repository>
 	</distributionManagement>
 	<profiles>
@@ -84,12 +87,14 @@
 			</activation>
 			<build>
 				<plugins>
-					<!-- https://mvnrepository.com/artifact/org.sonatype.plugins/nexus-staging-maven-plugin -->
+					<!--
+					https://mvnrepository.com/artifact/org.sonatype.plugins/nexus-staging-maven-plugin -->
 					<!-- sonatype release -->
 					<plugin>
 						<groupId>org.sonatype.plugins</groupId>
 						<artifactId>nexus-staging-maven-plugin</artifactId>
-						<!-- version>1.6.8</version --><!-- Feb 13, 2017 -->
+						<!-- version>1.6.8</version --><!--
+						Feb 13, 2017 -->
 						<version>1.6.13</version><!-- Apr 21, 2022 -->
 						<extensions>true</extensions>
 						<configuration>
@@ -164,7 +169,8 @@
 					<additionalparam>-Xdoclint:none</additionalparam>
 					<additionalOptions>-Xdoclint:none</additionalOptions>
 					<additionalJOption>-Xdoclint:none</additionalJOption>
-					<!-- javadocExecutable>${java.home}/../bin/javadoc</javadocExecutable -->
+					<!--
+					javadocExecutable>${java.home}/../bin/javadoc</javadocExecutable -->
 					<javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
 					<author>true</author>
 					<source>${maven.compiler.source}</source>
@@ -216,11 +222,12 @@
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp -->
 		<!-- dependency -->
-			<!-- groupId>com.squareup.okhttp3</groupId -->
-			<!-- artifactId>okhttp</artifactId -->
-			<!-- version>3.14.9</version -->
+		<!-- groupId>com.squareup.okhttp3</groupId -->
+		<!-- artifactId>okhttp</artifactId -->
+		<!-- version>3.14.9</version -->
 		<!-- / dependency -->
-		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents.client5/httpclient5 -->
+		<!--
+		https://mvnrepository.com/artifact/org.apache.httpcomponents.client5/httpclient5 -->
 		<dependency>
 			<groupId>org.apache.httpcomponents.client5</groupId>
 			<artifactId>httpclient5</artifactId>
@@ -228,17 +235,19 @@
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.squareup.okio/okio -->
 		<!-- dependency -->
-			<!-- groupId>com.squareup.okio</groupId -->
-			<!-- artifactId>okio</artifactId -->
-			<!-- version>2.2.2</version -->
+		<!-- groupId>com.squareup.okio</groupId -->
+		<!-- artifactId>okio</artifactId -->
+		<!-- version>2.2.2</version -->
 		<!-- /dependency -->
-		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+		<!--
+		https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
 			<version>2.17.2</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
+		<!--
+		https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-api</artifactId>
@@ -248,7 +257,8 @@
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
-			<version>2.11.0</version>
+			<!-- 2023-08-16 : 2.11.0 to 2.13.0  -->
+			<version>2.13.0</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-text -->
 		<dependency>
@@ -260,9 +270,11 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
-			<version>3.12.0</version>
+			<!-- 2023-08-16 : 3.12.0 to 3.13.0  -->
+			<version>3.13.0</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-collections4 -->
+		<!--
+		https://mvnrepository.com/artifact/org.apache.commons/commons-collections4 -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-collections4</artifactId>
@@ -272,19 +284,21 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-csv</artifactId>
-			<version>1.9.0</version>
+			<!-- 2023-08-16 : 1.9.0 to 1.10.0  -->
+			<version>1.10.0</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
-			<version>2.9.0</version>
+			<!-- 2023-08-16 : 2.9.0 to 2.10.1  -->
+			<version>2.10.1</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/junit/junit -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>3.8.2</version>
+			<version>4.13.2</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
