--- a/nlp4j/nlp4j-examples/pom.xml
+++ b/nlp4j/nlp4j-examples/pom.xml
@@ -12,7 +12,7 @@
 		<dependency>
 			<groupId>org.nlp4j</groupId>
 			<artifactId>nlp4j-core</artifactId>
-			<version>[1.3.7.10,)</version>
+			<version>[1.3.7.12,)</version>
 		</dependency>
 		<dependency>
 			<groupId>org.nlp4j</groupId>
@@ -73,6 +73,11 @@
 			<groupId>org.nlp4j</groupId>
 			<artifactId>nlp4j-kuromoji</artifactId>
 			<version>1.3.4.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.nlp4j</groupId>
+			<artifactId>nlp4j-sudachi</artifactId>
+			<version>1.1.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.nlp4j</groupId>
