--- a/nlp4j/nlp4j-solr9/pom.xml
+++ b/nlp4j/nlp4j-solr9/pom.xml
@@ -37,7 +37,18 @@
 		<dependency>
 			<groupId>org.nlp4j</groupId>
 			<artifactId>nlp4j-core</artifactId>
-			<version>1.3.7.10</version>
+			<version>1.3.7.12</version>
+		</dependency>
+		<dependency>
+			<groupId>org.nlp4j</groupId>
+			<artifactId>nlp4j-openai</artifactId>
+			<version>0.1.0.0</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.solr/solr-solrj -->
+		<dependency>
+			<groupId>org.apache.solr</groupId>
+			<artifactId>solr-solrj</artifactId>
+			<version>9.2.1</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/junit/junit -->
 		<dependency>
@@ -45,12 +56,6 @@
 			<artifactId>junit</artifactId>
 			<version>3.8.2</version>
 			<scope>test</scope>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.apache.solr/solr-solrj -->
-		<dependency>
-			<groupId>org.apache.solr</groupId>
-			<artifactId>solr-solrj</artifactId>
-			<version>9.2.1</version>
 		</dependency>
 	</dependencies>
 </project>
