--- a/nlp4j/nlp4j-llm/pom.xml
+++ b/nlp4j/nlp4j-llm/pom.xml
@@ -7,8 +7,8 @@
 		<artifactId>nlp4j</artifactId>
 		<version>1.3.1.0</version>
 	</parent>
-	<artifactId>nlp4j-ginza</artifactId>
-	<version>1.0.1.0</version>
+	<artifactId>nlp4j-llm</artifactId>
+	<version>1.0.0.0</version>
 	<licenses>
 		<license>
 			<name>Apache License, Version 2.0</name>
@@ -30,4 +30,5 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+
 </project>
