--- a/nlp4j/nlp4j-stanford/pom.xml
+++ b/nlp4j/nlp4j-stanford/pom.xml
@@ -5,7 +5,11 @@
 		<artifactId>nlp4j</artifactId>
 		<version>1.3.1.0</version>
 	</parent>
-	<version>1.3.5.0</version>
+	<!-- 1.3.0.0 Jul 08, 2021 -->
+	<!-- 1.3.1.1 Jul 18, 2021 -->
+	<!-- 1.3.4.0 Dec 30, 2021 -->
+	<!-- 1.3.5.0 Apr 29, 2022 -->
+	<version>1.3.5.1</version>
 	<artifactId>nlp4j-stanford</artifactId>
 	<licenses>
 		<license>
@@ -29,6 +33,41 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
+					<!--
+					https://mvnrepository.com/artifact/org.sonatype.plugins/nexus-staging-maven-plugin -->
+					<!-- sonatype release -->
+					<plugin>
+						<groupId>org.sonatype.plugins</groupId>
+						<artifactId>nexus-staging-maven-plugin</artifactId>
+						<!-- version>1.6.8</version --><!--
+						Feb 13, 2017 -->
+						<version>1.6.13</version><!-- Apr 21, 2022 -->
+						<extensions>true</extensions>
+						<configuration>
+							<serverId>ossrh</serverId>
+							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
+							<autoReleaseAfterClose>true</autoReleaseAfterClose>
+						</configuration>
+					</plugin>
+					<!-- javadoc -->
+					<!-- https://maven.apache.org/plugins/maven-javadoc-plugin/ -->
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-javadoc-plugin</artifactId>
+						<version>3.1.1</version>
+						<configuration>
+							<author>true</author>
+							<source>1.8</source>
+							<encoding>UTF-8</encoding>
+							<charset>UTF-8</charset>
+							<docencoding>UTF-8</docencoding>
+							<additionalparam>-Xdoclint:none</additionalparam>
+							<additionalOptions>-Xdoclint:none</additionalOptions>
+							<additionalJOption>-Xdoclint:none</additionalJOption>
+							<additionalJOption>-Xdoclint:all</additionalJOption>
+							<additionalJOption>-Xdoclint:-missing</additionalJOption>
+						</configuration>
+					</plugin>
 		</plugins>
 	</build>
 	<dependencies>
