--- a/nlp4j/nlp4j-kuromoji/pom.xml
+++ b/nlp4j/nlp4j-kuromoji/pom.xml
@@ -10,6 +10,7 @@
 	</parent>
 	<!-- ARTIFACT -->
 	<artifactId>nlp4j-kuromoji</artifactId>
+	<!-- 1.3.4.0 Dec 29, 2021 -->
 	<version>1.3.4.0</version>
 	<licenses>
 		<license>
