--- a/nlp4j/nlp4j-solr/pom.xml
+++ b/nlp4j/nlp4j-solr/pom.xml
@@ -8,7 +8,7 @@
 		<version>1.3.1.0</version>
 	</parent>
 	<artifactId>nlp4j-solr</artifactId>
-	<version>0.9.6.1</version>
+	<version>0.9.6.1a</version>
 	<licenses>
 		<license>
 			<name>Apache License, Version 2.0</name>
