--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ nlp4j/nlp4j-word2vec/.project
 nlp4j/nlp4j-word2vec/.classpath
 nlp4j/nlp4j-word2vec/.project
 nlp4j/nlp4j-mecab/.classpath
+nlp4j/nlp4j-mecab/.classpath
