--- a/nlp4j/nlp4j-web-rag/pom.xml
+++ b/nlp4j/nlp4j-web-rag/pom.xml
@@ -1,22 +1,21 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>nlp4j.web</groupId>
-	<artifactId>nlp4j-web-app</artifactId>
+	<groupId>org.nlp4j</groupId>
+	<artifactId>nlp4j-web-rag</artifactId>
 	<version>1.0.0.0</version>
 	<packaging>war</packaging>
-	<name>nlp4j-web-app</name>
-	<url>https://www.nlp4j.org/</url>
+	<!-- 文字コードとJavaのバージョンの設定 -->
 	<properties>
-		<java.version>1.8</java.version>
+		<!-- 変数 -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<!-- 変数 -->
+		<java.version>1.8</java.version>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 	<build>
-		<finalName>nlp4j-web-app</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -31,28 +30,20 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
 				<version>3.3.2</version>
-				<configuration>
-					<warName>nlp4j-web-app</warName>
-				</configuration>
-			</plugin>
-
-			<plugin>
-				<groupId>org.eclipse.jetty</groupId>
-				<artifactId>jetty-maven-plugin</artifactId>
-				<version>9.4.44.v20210927</version>
-				<configuration>
-					<httpConnector>
-						<port>8080</port>
-					</httpConnector>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
 	<dependencies>
 		<dependency>
 			<groupId>org.nlp4j</groupId>
-			<artifactId>nlp4j-core</artifactId>
-			<version>1.3.7.12</version>
+			<artifactId>nlp4j-solr</artifactId>
+			<version>0.9.6.1a</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/log4j/log4j -->
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -74,6 +65,7 @@
 			<artifactId>weld-servlet</artifactId>
 			<version>2.4.8.Final</version>
 		</dependency>
+
 		<!--
 		https://mvnrepository.com/artifact/javax.websocket/javax.websocket-api -->
 		<dependency>
@@ -82,23 +74,6 @@
 			<version>1.1</version>
 			<scope>provided</scope>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.eclipse.jetty/jetty-webapp -->
-		<dependency>
-			<groupId>org.eclipse.jetty</groupId>
-			<artifactId>jetty-server</artifactId>
-			<version>9.4.51.v20230217</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.jetty</groupId>
-			<artifactId>jetty-annotations</artifactId>
-			<version>9.4.51.v20230217</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.jetty</groupId>
-			<artifactId>jetty-webapp</artifactId>
-			<version>9.4.51.v20230217</version>
-		</dependency>
-
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
